# nau-lab-image-processing

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
docker/api/: Dockerfile
docker/processor/: Dockerfile
src/api/: main.py
src/api/controllers/: scaling.py
src/api/models/: image.py  task.py
src/api/repositories/: base.py  tasks.py
src/api/views/: router.py
src/common/config/: settings.py
src/processor/: main.py
src/processor/models/: task.py
src/processor/services/: processor.py
